#493 Adds new method to find space pirate and monster player infos.
Refactors obsolete methdos and fixes minor issues.